--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: test_git@v1
+        uses: test_git/main@v1
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
