--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,27 @@
-# action.yml
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
+# # action.yml
+# name: 'Hello World'
+# description: 'Greet someone and record the time'
+# inputs:
+#   who-to-greet:  # id of input
+#     description: 'Who to greet'
+#     required: true
+#     default: 'World'
+# runs:
+#   using: 'docker'
+#   image: 'Dockerfile'
+
+# on: [push]
+
+# jobs:
+#   hello_world_job:
+#     runs-on: ubuntu-latest
+#     name: A job to say hello
+#     steps:
+#       - name: Hello world action step
+#         id: hello
+#         uses: actions/hello-world-docker-action@v2
+#         with:
+#           who-to-greet: 'Mona the Octocat'
+#       # Use the output from the `hello` step
+#       - name: Get the output time
+#         run: echo "The time was ${{ steps.hello.outputs.time }}"
