--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-# # action.yml
-# name: 'Hello World'
-# description: 'Greet someone and record the time'
+# action.yml
+name: 'Hello World'
+description: 'Greet someone and record the time'
 # inputs:
 #   who-to-greet:  # id of input
 #     description: 'Who to greet'
