--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -11,7 +11,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       # Use the output from the `hello` step
-      - name: Get the output time
+      - name: build docker
         run: docker build -t gta  .
       - name: run docker
         run: docker run --rm -it --entrypoint /bin/bash  gta:latest
