--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -15,3 +15,5 @@ jobs:
         run: docker build -t gta  .
       - name: run docker
         run: docker run -d gta:latest
+      - name: check server
+        run: curl http://localhost:8000
