--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -14,6 +14,6 @@ jobs:
       - name: build docker
         run: docker build -t gta  .
       - name: run docker
-        run: docker run -p 8000:8000 -d gta:latest
+        run: docker run -d -p 8000:8000 gta:latest
       - name: check server
         run: curl http://localhost:8000
